@@ -4,7 +4,7 @@ EFENCE=
 INCLUDES = -I$(top_srcdir)/gconf -I$(includedir)  $(ORBIT_CFLAGS) $(GLIB_CFLAGS) \
 	 -DG_LOG_DOMAIN=\"GConf-Tests\"
 
-noinst_PROGRAMS=testgconf testlisteners testschemas
+noinst_PROGRAMS=testgconf testlisteners testschemas testchangeset
 
 testgconf_SOURCES=testgconf.c
 
@@ -18,3 +18,6 @@ testschemas_SOURCES=testschemas.c
 
 testschemas_LDADD = $(ORBIT_LIBS) $(GLIB_LIBS) $(top_builddir)/gconf/libgconf.la  $(EFENCE)
 
+testchangeset_SOURCES=testchangeset.c
+
+testchangeset_LDADD = $(ORBIT_LIBS) $(GLIB_LIBS) $(top_builddir)/gconf/libgconf.la  $(EFENCE)
