@@ -1,5 +1,12 @@
 1999-11-11  Havoc Pennington  <hp@pobox.com>
 
+	* tests/testchangeset.c: test for the changeset stuff
+	
+	* gconf/gconf.c (gconf_set): add check that string values don't
+	contain a NULL string	
+
+	* gconf/gconf-changeset.c (gconf_change_set_unset): fix typo
+
         * doc/gconf.sgml: tweaks
 	
 	* gconf/gconf-changeset.c, gconf/gconf-changeset.h: ChangeSet data
